feat: Aula_06_busca_cega

--- a/Aula_06_Busca_cega/02_implementacao.ipynb
+++ b/Aula_06_Busca_cega/02_implementacao.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "\n",
     "    def verifica_estados(self, atual, objetivo):\n",
     "        '''\n",
-    "        Verifica se dois estados são iguais\n",
+    "        Verifica se o estado atual é o objetivo da busca\n",
     "        Args:\n",
     "            - atual: matriz que descreve o estado atual\n",
     "            - objetivo: matriz que descreve o estado objetivo\n",
@@ -157,63 +157,15 @@
    "outputs": [],
    "source": [
     "from queue import Queue\n",
-    "\n",
-    "class BreadthFirstSearch():\n",
-    "    def __init__(self, problema):\n",
-    "        '''\n",
-    "        Construtor\n",
-    "        Args:\n",
-    "            - problema: objeto do problema a ser solucionado\n",
-    "        '''\n",
-    "        self.problema = problema\n",
-    "        \n",
-    "    def _verifica_visitado(self, estado, estados_visitados):\n",
-    "        '''\n",
-    "        Verifica se 'estado' está na lista de estados visitados\n",
-    "        Args:\n",
-    "            - estado: estado qualquer do tabuleiro\n",
-    "            - estados_visitados: lista com todos os estados já visitados\n",
-    "        Return:\n",
-    "            - booleano dizendo se o estado foi visitado ou não\n",
-    "        '''\n",
-    "        for i in estados_visitados:\n",
-    "            if self.problema.verifica_estados(i, estado):\n",
-    "                return True\n",
-    "        return False\n",
-    "    \n",
-    "    def busca(self, inicio, fim):\n",
-    "        '''\n",
-    "        Realiza a busca BFS, armazenando os estados em uma FILA\n",
-    "        Args:\n",
-    "            - inicio: estado inicial do problema\n",
-    "            - fim: estado objetivo\n",
-    "        Return:\n",
-    "            - booleano se a solução foi encontrada, lista dos estados visitados, quantidade de estados visitados\n",
-    "        '''\n",
-    "        fila = Queue()\n",
-    "        fila.put(inicio)\n",
-    "        \n",
-    "        solucao_encontrada = False\n",
-    "        estados_visitados = []\n",
-    "        cont_estados = 0\n",
-    "        \n",
-    "        while not fila.empty():\n",
-    "            atual = fila.get()\n",
-    "            estados_visitados.append(atual)\n",
-    "            \n",
-    "            if self.problema.verifica_estados(atual, fim):\n",
-    "                solucao_encontrada = True\n",
-    "                break\n",
-    "                \n",
-    "            else:\n",
-    "                cont_estados += 1\n",
-    "                print(f\"Visitando #{cont_estados}\")\n",
-    "                novos_estados = self.problema.expande_estados(atual)\n",
-    "                for i in novos_estados:\n",
-    "                    if not self._verifica_visitado(i, estados_visitados):\n",
-    "                        fila.put(i)\n",
-    "                        \n",
-    "        return solucao_encontrada, estados_visitados, cont_estados"
+    "# Classe \n",
+    "## Construtor \n",
+    "## Verificar se estado já foi visitado\n",
+    "## Busca\n",
+    "## Enquanto houver elementos na fila\n",
+    "### Verificar objetivo\n",
+    "### Expandir estados\n",
+    "### Expandir estados\n",
+    "\n"
    ]
   },
   {
@@ -229,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,15 +219,15 @@
     "        Return:\n",
     "            - booleano se a solução foi encontrada, lista dos estados visitados, quantidade de estados visitados\n",
     "        '''\n",
-    "        piha = LifoQueue()\n",
-    "        piha.put(inicio)\n",
+    "        fila = LifoQueue()\n",
+    "        fila.put(inicio)\n",
     "        \n",
     "        solucao_encontrada = False\n",
     "        estados_visitados = []\n",
     "        cont_estados = 0\n",
     "        \n",
-    "        while not piha.empty():\n",
-    "            atual = piha.get()\n",
+    "        while not fila.empty():\n",
+    "            atual = fila.get()\n",
     "            estados_visitados.append(atual)\n",
     "            \n",
     "            if self.problema.verifica_estados(atual, fim):\n",
@@ -288,8 +240,11 @@
     "                novos_estados = self.problema.expande_estados(atual)\n",
     "                for i in novos_estados:\n",
     "                    if not self._verifica_visitado(i, estados_visitados):\n",
-    "                        piha.put(i)\n",
-    "\n",
+    "                        fila.put(i)\n",
+    "                        \n",
+    "            if cont_estados >50:\n",
+    "                return False, estados_visitados, cont_estados\n",
+    "                        \n",
     "        return solucao_encontrada, estados_visitados, cont_estados"
    ]
   },
@@ -302,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,31 +297,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visitando #1\n",
-      "Visitando #2\n",
-      "Visitando #3\n",
-      "Visitando #4\n",
-      "Visitando #5\n",
-      "Visitando #6\n",
-      "Visitando #7\n",
-      "Visitando #8\n",
-      "Visitando #9\n",
-      "Visitando #10\n",
-      "Visitando #11\n",
-      "Visitando #12\n",
-      "Visitando #13\n",
-      "Visitando #14\n",
-      "Visitando #15\n",
-      "Visitando #16\n",
-      "Visitando #17\n",
-      "Visitando #18\n",
+      "Visitando: 1\n",
+      "Visitando: 2\n",
+      "Visitando: 3\n",
+      "Visitando: 4\n",
+      "Visitando: 5\n",
+      "Visitando: 6\n",
+      "Visitando: 7\n",
+      "Visitando: 8\n",
+      "Visitando: 9\n",
+      "Visitando: 10\n",
+      "Visitando: 11\n",
+      "Visitando: 12\n",
+      "Visitando: 13\n",
+      "Visitando: 14\n",
+      "Visitando: 15\n",
+      "Visitando: 16\n",
+      "Visitando: 17\n",
+      "Visitando: 18\n",
       "Solution found!!!\n"
      ]
     }
@@ -389,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,11 +386,11 @@
       "==== BFS ====\n",
       "Solução encontrada? True\n",
       "Número de estados visitados: 18\n",
-      "Tempo de execução: 0.005984067916870117\n",
+      "Tempo de execução: 0.005986690521240234\n",
       "==== DFS ====\n",
       "Solução encontrada? True\n",
       "Número de estados visitados: 3\n",
-      "Tempo de execução: 0.0009930133819580078\n"
+      "Tempo de execução: 0.0009968280792236328\n"
      ]
     }
    ],
