--- a/Aula_06_Busca_cega/02_implementacao.ipynb
+++ b/Aula_06_Busca_cega/02_implementacao.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +152,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from queue import Queue\n",
     "# Classe \n",
+    "class BreadthFirstSearch():\n",
+    "    \n",
+    "    def __init__(self, problema):\n",
+    "        self.problema = problema\n",
+    "        \n",
+    "    def _verifica_visitado(self, estado, estados_visitados):\n",
+    "        for i in estados_visitados:\n",
+    "            if self.problema.verifica_estados(i, estado):\n",
+    "                return True\n",
+    "        return False\n",
+    "        \n",
+    "    def busca(self, inicio, fim):\n",
+    "        fila = Queue()\n",
+    "        fila.put(inicio)\n",
+    "        \n",
+    "        solucao_encontrada = False\n",
+    "        estados_visitados = []\n",
+    "        cont_estados = 0\n",
+    "        \n",
+    "        while not fila.empty():\n",
+    "            atual = fila.get()\n",
+    "            estados_visitados.append(atual)\n",
+    "            \n",
+    "            if self.problema.verifica_estados(atual, fim):\n",
+    "                solucao_encontrada = True\n",
+    "                break\n",
+    "                \n",
+    "            else:\n",
+    "                cont_estados += 1\n",
+    "                print(f\"Visitando #{cont_estados}\")\n",
+    "                novos_estados = self.problema.expande_estados(atual)\n",
+    "                for i in novos_estados:\n",
+    "                    if not self._verifica_visitado(i, estados_visitados):\n",
+    "                        fila.put(i)\n",
+    "                        \n",
+    "        return solucao_encontrada, estados_visitados, cont_estados\n",
+    "            \n",
     "## Construtor \n",
     "## Verificar se estado já foi visitado\n",
     "## Busca\n",
@@ -181,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,15 +256,15 @@
     "        Return:\n",
     "            - booleano se a solução foi encontrada, lista dos estados visitados, quantidade de estados visitados\n",
     "        '''\n",
-    "        fila = LifoQueue()\n",
-    "        fila.put(inicio)\n",
+    "        pilha = LifoQueue()\n",
+    "        pilha.put(inicio)\n",
     "        \n",
     "        solucao_encontrada = False\n",
     "        estados_visitados = []\n",
     "        cont_estados = 0\n",
     "        \n",
-    "        while not fila.empty():\n",
-    "            atual = fila.get()\n",
+    "        while not pilha.empty():\n",
+    "            atual = pilha.get()\n",
     "            estados_visitados.append(atual)\n",
     "            \n",
     "            if self.problema.verifica_estados(atual, fim):\n",
@@ -240,10 +277,7 @@
     "                novos_estados = self.problema.expande_estados(atual)\n",
     "                for i in novos_estados:\n",
     "                    if not self._verifica_visitado(i, estados_visitados):\n",
-    "                        fila.put(i)\n",
-    "                        \n",
-    "            if cont_estados >50:\n",
-    "                return False, estados_visitados, cont_estados\n",
+    "                        pilha.put(i)\n",
     "                        \n",
     "        return solucao_encontrada, estados_visitados, cont_estados"
    ]
@@ -257,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,31 +331,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visitando: 1\n",
-      "Visitando: 2\n",
-      "Visitando: 3\n",
-      "Visitando: 4\n",
-      "Visitando: 5\n",
-      "Visitando: 6\n",
-      "Visitando: 7\n",
-      "Visitando: 8\n",
-      "Visitando: 9\n",
-      "Visitando: 10\n",
-      "Visitando: 11\n",
-      "Visitando: 12\n",
-      "Visitando: 13\n",
-      "Visitando: 14\n",
-      "Visitando: 15\n",
-      "Visitando: 16\n",
-      "Visitando: 17\n",
-      "Visitando: 18\n",
+      "Visitando #1\n",
+      "Visitando #2\n",
+      "Visitando #3\n",
+      "Visitando #4\n",
+      "Visitando #5\n",
+      "Visitando #6\n",
+      "Visitando #7\n",
+      "Visitando #8\n",
+      "Visitando #9\n",
+      "Visitando #10\n",
+      "Visitando #11\n",
+      "Visitando #12\n",
+      "Visitando #13\n",
+      "Visitando #14\n",
+      "Visitando #15\n",
+      "Visitando #16\n",
+      "Visitando #17\n",
+      "Visitando #18\n",
       "Solution found!!!\n"
      ]
     }
@@ -344,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -386,11 +420,11 @@
       "==== BFS ====\n",
       "Solução encontrada? True\n",
       "Número de estados visitados: 18\n",
-      "Tempo de execução: 0.005986690521240234\n",
+      "Tempo de execução: 0.007016181945800781\n",
       "==== DFS ====\n",
       "Solução encontrada? True\n",
       "Número de estados visitados: 3\n",
-      "Tempo de execução: 0.0009968280792236328\n"
+      "Tempo de execução: 0.0009951591491699219\n"
      ]
     }
    ],
