--- a/TrabalhoPratico01/Trabalho01.ipynb
+++ b/TrabalhoPratico01/Trabalho01.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "#### Preencha com as informações da dupla\n",
-    "#### a) NOME SOBRENOME / CURSO / PERÍODO / TURMA\n",
+    "#### a) Antônio Victor Mendes Fonseca / GES / 7º / C210-L3\n",
     "#### b) NOME SOBRENOME / CURSO / PERÍODO / TURMA"
    ]
   },
@@ -217,8 +217,40 @@
     "            \n",
     "        return False\n",
     "    \n",
+    "    \n",
     "    def busca(self, inicio):\n",
-    "        # IMPLEMENTAR"
+    "        '''\n",
+    "        Realiza a busca BFS, armazenando os estados em uma FILA\n",
+    "        Args:\n",
+    "            - inicio: estado inicial do problema\n",
+    "            - fim: estado objetivo\n",
+    "        Return:\n",
+    "            - booleano se a solução foi encontrada, lista dos estados visitados, quantidade de estados visitados\n",
+    "        '''\n",
+    "        fila = Queue()\n",
+    "        fila.put(inicio)\n",
+    "        \n",
+    "        solucao_encontrada = False\n",
+    "        estados_visitados = []\n",
+    "        cont_estados = 0\n",
+    "        \n",
+    "        while not fila.empty():\n",
+    "            atual = fila.get()\n",
+    "            estados_visitados.append(atual)\n",
+    "           \n",
+    "            if self.problema.verifica_objetivo(atual):\n",
+    "                solucao_encontrada = True\n",
+    "                break\n",
+    "                \n",
+    "            else:\n",
+    "                cont_estados += 1\n",
+    "                print(f\"Visitando #{cont_estados}\")\n",
+    "                novos_estados = self.problema.expande_estados(atual)\n",
+    "                for i in novos_estados:\n",
+    "                    if not self.verifica_visitados(i, estados_visitados):\n",
+    "                        fila.put(i)\n",
+    "                        \n",
+    "        return solucao_encontrada, estados_visitados, cont_estados"
    ]
   },
   {
@@ -275,7 +307,31 @@
     "        return False\n",
     "    \n",
     "    def busca(self, inicio):\n",
-    "        # IMPLEMENTAR"
+    "        \n",
+    "        piha = LifoQueue()\n",
+    "        piha.put(inicio)\n",
+    "        \n",
+    "        solucao_encontrada = False\n",
+    "        estados_visitados = []\n",
+    "        cont_estados = 0\n",
+    "        \n",
+    "        while not piha.empty():\n",
+    "            atual = piha.get()\n",
+    "            estados_visitados.append(atual)\n",
+    "            \n",
+    "            if self.problema.verifica_objetivo(atual):\n",
+    "                solucao_encontrada = True\n",
+    "                break\n",
+    "                \n",
+    "            else:\n",
+    "                cont_estados += 1\n",
+    "                print(f\"Visitando #{cont_estados}\")\n",
+    "                novos_estados = self.problema.expande_estados(atual)\n",
+    "                for i in novos_estados:\n",
+    "                    if not self.verifica_visitados(i, estados_visitados):\n",
+    "                        piha.put(i)\n",
+    "\n",
+    "        return solucao_encontrada, estados_visitados, cont_estados"
    ]
   },
   {
@@ -393,12 +449,19 @@
     "        return novos_estados\n",
     "        \n",
     "    def heuristica(self, estado):\n",
-    "        # IMPLEMENTAR"
+    "        n_sujos = 0 \n",
+    "        \n",
+    "        for i in range(self.tamanho):\n",
+    "            for j in range(self.tamanho):\n",
+    "                if estado[i, j] == 'i':\n",
+    "                    n_sujos+=1\n",
+    "                    \n",
+    "        return n_sujos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +506,38 @@
     "        return False\n",
     "    \n",
     "    def busca(self, inicio):\n",
-    "        # IMPLEMENTAR"
+    "        p_fila = []\n",
+    "        \n",
+    "        # H, ID, elemento\n",
+    "        id_estado = 0\n",
+    "        heapq.heappush(p_fila, (0, id_estado, inicio))\n",
+    "\n",
+    "        solucao_encontrada = False\n",
+    "        estados_visitados = []\n",
+    "        cont_estados = 0\n",
+    "\n",
+    "        while not len(p_fila) == 0:\n",
+    "            atual = heapq.heappop(p_fila)[2]\n",
+    "            estados_visitados.append(atual)\n",
+    "            print(f\"Estado:\\n{atual}\")\n",
+    "\n",
+    "            if self.problema.verifica_objetivo(atual):\n",
+    "                solucao_encontrada = True\n",
+    "                break\n",
+    "            else:\n",
+    "                cont_estados += 1\n",
+    "                print(\"Visitando #\", cont_estados)\n",
+    "                novos_estados = self.problema.expande_estados(atual)\n",
+    "                print(\"Estados Gerados:\")\n",
+    "                for i in novos_estados:\n",
+    "                    if not self.verifica_visitados(i, estados_visitados):\n",
+    "                        id_estado += 1\n",
+    "                        n_sujos = self.problema.heuristica(i)\n",
+    "                        print(i)\n",
+    "                        print(n_sujos)\n",
+    "                        heapq.heappush(p_fila, (n_sujos, id_estado, i))\n",
+    "\n",
+    "        return solucao_encontrada, estados_visitados, cont_estados"
    ]
   },
   {
@@ -472,6 +566,12 @@
     }
    ],
    "source": [
+    "# Pacote auxiliar para o cálculo do tempo\n",
+    "from time import time\n",
+    "\n",
+    "# Criando objeto do problema\n",
+    "problema = Aspirador(3)\n",
+    "\n",
     "# Criando Matriz inicial\n",
     "start = np.array([['x','i','o'],['i','i','i'],['o','o','i']])\n",
     "start"
@@ -479,29 +579,381 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visitando #1\n",
+      "Visitando #2\n",
+      "Visitando #3\n",
+      "Visitando #4\n",
+      "Visitando #5\n",
+      "Visitando #6\n",
+      "Visitando #7\n",
+      "Visitando #8\n",
+      "Visitando #9\n",
+      "Visitando #10\n",
+      "Visitando #11\n",
+      "Visitando #12\n",
+      "Visitando #13\n",
+      "Visitando #14\n",
+      "Visitando #15\n",
+      "Visitando #16\n",
+      "Visitando #17\n",
+      "Visitando #18\n",
+      "Visitando #19\n",
+      "Visitando #20\n",
+      "Visitando #21\n",
+      "Visitando #22\n",
+      "Visitando #23\n",
+      "Visitando #24\n",
+      "Visitando #25\n",
+      "Visitando #26\n",
+      "Visitando #27\n",
+      "Visitando #28\n",
+      "Visitando #29\n",
+      "Visitando #30\n",
+      "Visitando #31\n",
+      "Visitando #32\n",
+      "Visitando #33\n",
+      "Visitando #34\n",
+      "Visitando #35\n",
+      "Visitando #36\n",
+      "Visitando #37\n",
+      "Visitando #38\n",
+      "Visitando #39\n",
+      "Visitando #40\n",
+      "Visitando #41\n",
+      "Visitando #42\n",
+      "Visitando #43\n",
+      "Visitando #44\n",
+      "Visitando #45\n",
+      "Visitando #46\n",
+      "Visitando #47\n",
+      "Visitando #48\n",
+      "Visitando #49\n",
+      "Visitando #50\n",
+      "Visitando #51\n",
+      "Visitando #52\n",
+      "Visitando #53\n",
+      "Visitando #54\n",
+      "Visitando #55\n",
+      "Visitando #56\n",
+      "Visitando #57\n",
+      "Visitando #58\n",
+      "Visitando #59\n",
+      "Visitando #60\n",
+      "Visitando #61\n",
+      "Visitando #62\n",
+      "Visitando #63\n",
+      "Visitando #64\n",
+      "Visitando #65\n",
+      "Visitando #66\n",
+      "Visitando #67\n",
+      "Visitando #68\n",
+      "Visitando #69\n",
+      "Visitando #70\n",
+      "Visitando #71\n",
+      "Visitando #72\n",
+      "Visitando #73\n",
+      "Visitando #74\n",
+      "Visitando #75\n",
+      "Visitando #76\n",
+      "Visitando #77\n",
+      "Visitando #78\n",
+      "Visitando #79\n",
+      "Visitando #80\n",
+      "Visitando #81\n",
+      "Visitando #82\n",
+      "Visitando #83\n",
+      "Visitando #84\n",
+      "Visitando #85\n",
+      "Visitando #86\n",
+      "Visitando #87\n",
+      "Visitando #88\n",
+      "Visitando #89\n",
+      "Solution found!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execução do BFS\n",
+    "bfs = BreadthFirstSearch(problema)\n",
+    "\n",
+    "ini = time() # Tempo inicial\n",
+    "\n",
+    "bfs_solucao, bfs_estados_visitados, bfs_num_visitados = bfs.busca(start) # chamando busca\n",
+    "\n",
+    "bfs_time = time()-ini # Tempo total\n",
+    "\n",
+    "if bfs_solucao:\n",
+    "    print(f\"Solution found!!!\")\n",
+    "else:\n",
+    "    print(\"Solution not found!!!\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visitando #1\n",
+      "Visitando #2\n",
+      "Visitando #3\n",
+      "Visitando #4\n",
+      "Visitando #5\n",
+      "Visitando #6\n",
+      "Visitando #7\n",
+      "Visitando #8\n",
+      "Visitando #9\n",
+      "Solution found!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execução do DFS\n",
+    "dfs = DepthFirstSearch(problema)\n",
+    "\n",
+    "ini = time() # Tempo inicial\n",
+    "\n",
+    "dfs_solucao, dfs_estados_visitados, dfs_num_visitados = dfs.busca(start) # chamando busca\n",
+    "\n",
+    "dfs_time = time()-ini # Tempo total\n",
+    "\n",
+    "if dfs_solucao:\n",
+    "    print(f\"Solution found!!!\")\n",
+    "else:\n",
+    "    print(\"Solution not found!!!\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado:\n",
+      "[['x' 'i' 'o']\n",
+      " ['i' 'i' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "Visitando # 1\n",
+      "Estados Gerados:\n",
+      "[['o' 'i' 'o']\n",
+      " ['x' 'i' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "4\n",
+      "[['o' 'x' 'o']\n",
+      " ['i' 'i' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "4\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['x' 'i' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "Visitando # 2\n",
+      "Estados Gerados:\n",
+      "[['x' 'i' 'o']\n",
+      " ['o' 'i' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "4\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'i' 'i']\n",
+      " ['x' 'o' 'i']]\n",
+      "4\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'x' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "3\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'x' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "Visitando # 3\n",
+      "Estados Gerados:\n",
+      "[['o' 'x' 'o']\n",
+      " ['o' 'o' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'i']\n",
+      " ['o' 'x' 'i']]\n",
+      "3\n",
+      "[['o' 'i' 'o']\n",
+      " ['x' 'o' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "3\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'x']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "Estado:\n",
+      "[['o' 'x' 'o']\n",
+      " ['o' 'o' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "Visitando # 4\n",
+      "Estados Gerados:\n",
+      "[['o' 'o' 'o']\n",
+      " ['o' 'x' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "[['x' 'o' 'o']\n",
+      " ['o' 'o' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "[['o' 'o' 'x']\n",
+      " ['o' 'o' 'i']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'x']\n",
+      " ['o' 'o' 'i']]\n",
+      "Visitando # 5\n",
+      "Estados Gerados:\n",
+      "[['o' 'i' 'x']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'x']]\n",
+      "1\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'x' 'o']\n",
+      " ['o' 'o' 'i']]\n",
+      "2\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'x']]\n",
+      "Visitando # 6\n",
+      "Estados Gerados:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'x']\n",
+      " ['o' 'o' 'o']]\n",
+      "1\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'x' 'o']]\n",
+      "1\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'x']\n",
+      " ['o' 'o' 'o']]\n",
+      "Visitando # 7\n",
+      "Estados Gerados:\n",
+      "[['o' 'i' 'x']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "1\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'x' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "1\n",
+      "Estado:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'x' 'o']]\n",
+      "Visitando # 8\n",
+      "Estados Gerados:\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'x' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "1\n",
+      "[['o' 'i' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['x' 'o' 'o']]\n",
+      "1\n",
+      "Estado:\n",
+      "[['o' 'i' 'x']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "Visitando # 9\n",
+      "Estados Gerados:\n",
+      "[['o' 'x' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "0\n",
+      "Estado:\n",
+      "[['o' 'x' 'o']\n",
+      " ['o' 'o' 'o']\n",
+      " ['o' 'o' 'o']]\n",
+      "Solution found!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execução do BG\n",
+    "bg = BuscaGulosa(problema)\n",
+    "\n",
+    "ini = time() # Tempo inicial\n",
+    "\n",
+    "bg_solucao, bg_estados_visitados, bg_num_visitados = bg.busca(start) # chamando busca\n",
+    "\n",
+    "bg_time = time()-ini # Tempo total\n",
+    "\n",
+    "if bg_solucao:\n",
+    "    print(f\"Solution found!!!\")\n",
+    "else:\n",
+    "    print(\"Solution not found!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== BFS ====\n",
+      "Solução encontrada? True\n",
+      "Número de estados visitados: 89\n",
+      "Tempo de execução: 0.042205810546875\n",
+      "==== DFS ====\n",
+      "Solução encontrada? True\n",
+      "Número de estados visitados: 9\n",
+      "Tempo de execução: 0.006646156311035156\n",
+      "==== BG ====\n",
+      "Solução encontrada? True\n",
+      "Número de estados visitados: 9\n",
+      "Tempo de execução: 0.008975982666015625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apresentando resultados\n",
+    "print(\"==== BFS ====\")\n",
+    "print(f\"Solução encontrada? {bfs_solucao}\")\n",
+    "print(f\"Número de estados visitados: {bfs_num_visitados}\")\n",
+    "print(f\"Tempo de execução: {bfs_time}\")\n",
+    "\n",
+    "print(\"==== DFS ====\")\n",
+    "print(f\"Solução encontrada? {dfs_solucao}\")\n",
+    "print(f\"Número de estados visitados: {dfs_num_visitados}\")\n",
+    "print(f\"Tempo de execução: {dfs_time}\")\n",
+    "\n",
+    "print(\"==== BG ====\")\n",
+    "print(f\"Solução encontrada? {bg_solucao}\")\n",
+    "print(f\"Número de estados visitados: {bg_num_visitados}\")\n",
+    "print(f\"Tempo de execução: {bg_time}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
