--- a/Aula_16_Adaline/Adaline.ipynb
+++ b/Aula_16_Adaline/Adaline.ipynb
@@ -85,7 +85,7 @@
     "            Enquanto a diferença entre m mse_anterior e o mse_atual for maior que 'e' continua o processo \n",
     "        '''\n",
     "        self.weights = np.random.random(x.shape[1])\n",
-    "        self.bias = np.random.random()\n",
+    "        self.bias = -1\n",
     "        self.w_bias = np.random.random()\n",
     "        \n",
     "        epoch = 0\n",
